--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -202,6 +202,7 @@ ul{
   margin-right: auto;}
 
 [data-gnl~="0p"]{flex-basis: auto;}
+[data-gnl~="tam-kaplama"]{width: 100%; max-width: 100%;}
 
 /* Kap alanı genişliğini esnek yapmak */
 [data-gnl~="0p"] {flex-basis: auto;}
