--- a/assets/css/deveb.ilkel.css
+++ b/assets/css/deveb.ilkel.css
@@ -6,10 +6,14 @@
     Yeni gelen özellikler bu css dosyasında bulunmakta ve geliştirilmektedir.
 ========================================================================== */
 
-@media screen and (max-width: 567px){}
-@media screen and (min-width: 568px) and (max-width:767px){}
-@media screen and (min-width: 768px) and (max-width:1023px){}
-@media screen and (min-width: 1024px){}
+@media screen and (max-width: 567px){
+}
+@media screen and (min-width: 568px) and (max-width:767px){
+}
+@media screen and (min-width: 768px) and (max-width:1023px){
+}
+@media screen and (min-width: 1024px){
+}
 
 
 
