--- a/assets/css/deveb.genel.css
+++ b/assets/css/deveb.genel.css
@@ -27,7 +27,7 @@ pre{
 	display:block;
 	color:#333;
 	text-decoration:none;
-	font-weight:700;
+	font-weight:300;
 	font-size:12px;
 	line-height:32px;
 	padding:0.6rem 1rem;
@@ -104,6 +104,7 @@ pre{
 	font-family: 'Comfortaa', cursive;
 	font-size: 26px;
 	color:#2c2171 !important;
+	font-weight: bold;
 }
 .ap-kara	{background-color:#222;}
 .ap-deniz	{background-color: #17C4BB;}
