--- a/assets/css/deveb.ilkel.css
+++ b/assets/css/deveb.ilkel.css
@@ -122,8 +122,8 @@ input[data-bağ~="hafif"] + label{
 	-webkit-transition: all .4s ease;
 	transition: all .4s ease;
 }
-input[data-bağ~="hafif"] + label:after {left: 0;}
-input[data-bağ~="hafif"]:checked + label:after {left: 50%;}
+input[data-bağ] + label:after {left: 0;}
+input[data-bağ]:checked + label:after {left: 50%;}
 
 input[data-bağ~="hafif"] + label:after{
 	border-radius: 50%;
