--- a/assets/css/deveb.ilkel.css
+++ b/assets/css/deveb.ilkel.css
@@ -89,6 +89,10 @@
 input[data-bağ]{
 	display: none;
 }
+input[data-bağ], input[data-bağ]:after, input[data-bağ]:before, input[data-bağ] *,
+input[data-bağ] *:after, input[data-bağ] *:before, input[data-bağ] + label {
+  box-sizing: border-box;
+}
 input[data-bağ]+label{
 	outline: 0;
 	display: block;
@@ -124,7 +128,6 @@ input[data-bağ~="hafif"] + label{
 }
 input[data-bağ] + label:after {left: 0;}
 input[data-bağ]:checked + label:after {left: 50%;}
-
 input[data-bağ~="hafif"] + label:after{
 	border-radius: 50%;
   background: #fff;
@@ -134,6 +137,7 @@ input[data-bağ~="hafif"] + label:after{
 input[data-bağ~="hafif"]:checked + label {
   background-color: green;
 }
+
 input[data-bağ~="yumuşak"] + label {
   background: #fbfbfb;
   border-radius: 2em;
@@ -168,100 +172,7 @@ input[data-bağ~="yumuşak"]:checked + label:active:after {
   margin-left: -.8em;
 }
 
-
-.tgl {
-  display: none;
-}
-.tgl, .tgl:after, .tgl:before, .tgl *, .tgl *:after, .tgl *:before, .tgl + .tgl-btn {
-  box-sizing: border-box;
-}
-.tgl::-moz-selection, .tgl:after::-moz-selection, .tgl:before::-moz-selection, .tgl *::-moz-selection, .tgl *:after::-moz-selection, .tgl *:before::-moz-selection, .tgl + .tgl-btn::-moz-selection {
-  background: none;
-}
-.tgl::selection, .tgl:after::selection, .tgl:before::selection, .tgl *::selection, .tgl *:after::selection, .tgl *:before::selection, .tgl + .tgl-btn::selection {
-  background: none;
-}
-.tgl + .tgl-btn {
-  outline: 0;
-  display: block;
-  width: 4em;
-  height: 2em;
-  position: relative;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-.tgl + .tgl-btn:after, .tgl + .tgl-btn:before {
-  position: relative;
-  display: block;
-  content: "";
-  width: 50%;
-  height: 100%;
-}
-.tgl + .tgl-btn:after {
-  left: 0;
-}
-.tgl + .tgl-btn:before {
-  display: none;
-}
-.tgl:checked + .tgl-btn:after {
-  left: 50%;
-}
-
-.tgl-light + .tgl-btn {
-  background: #f0f0f0;
-  border-radius: 2em;
-  padding: 2px;
-  -webkit-transition: all .4s ease;
-  transition: all .4s ease;
-}
-.tgl-light + .tgl-btn:after {
-  border-radius: 50%;
-  background: #fff;
-  -webkit-transition: all .2s ease;
-  transition: all .2s ease;
-}
-.tgl-light:checked + .tgl-btn {
-  background: #9FD6AE;
-}
-
-.tgl-ios + .tgl-btn {
-  background: #fbfbfb;
-  border-radius: 2em;
-  padding: 2px;
-  -webkit-transition: all .4s ease;
-  transition: all .4s ease;
-  border: 1px solid #e8eae9;
-}
-.tgl-ios + .tgl-btn:after {
-  border-radius: 2em;
-  background: #fbfbfb;
-  -webkit-transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.3s ease, margin 0.3s ease;
-  transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.3s ease, margin 0.3s ease;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 4px 0 rgba(0, 0, 0, 0.08);
-}
-.tgl-ios + .tgl-btn:hover:after {
-  will-change: padding;
-}
-.tgl-ios + .tgl-btn:active {
-  box-shadow: inset 0 0 0 2em #e8eae9;
-}
-.tgl-ios + .tgl-btn:active:after {
-  padding-right: .8em;
-}
-.tgl-ios:checked + .tgl-btn {
-  background: #86d993;
-}
-.tgl-ios:checked + .tgl-btn:active {
-  box-shadow: none;
-}
-.tgl-ios:checked + .tgl-btn:active:after {
-  margin-left: -.8em;
-}
-
-.tgl-skewed + .tgl-btn {
+input[data-bağ~="eğik"] + label {
   overflow: hidden;
   -webkit-transform: skew(-10deg);
           transform: skew(-10deg);
@@ -272,7 +183,7 @@ input[data-bağ~="yumuşak"]:checked + label:active:after {
   font-family: sans-serif;
   background: #888;
 }
-.tgl-skewed + .tgl-btn:after, .tgl-skewed + .tgl-btn:before {
+input[data-bağ~="eğik"] + label:after, input[data-bağ~="eğik"] + label:before {
   -webkit-transform: skew(10deg);
           transform: skew(10deg);
   display: inline-block;
@@ -286,58 +197,70 @@ input[data-bağ~="yumuşak"]:checked + label:active:after {
   color: #fff;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
 }
-.tgl-skewed + .tgl-btn:after {
+input[data-bağ~="eğik"] + label:after {
   left: 100%;
-  content: attr(data-tg-on);
+  content: attr(data-bağ-açık);
 }
-.tgl-skewed + .tgl-btn:before {
+input[data-bağ~="eğik"] + label:before {
   left: 0;
-  content: attr(data-tg-off);
+  content: attr(data-bağ-kapalı);
 }
-.tgl-skewed + .tgl-btn:active {
+input[data-bağ~="eğik"] + label:active {
   background: #888;
 }
-.tgl-skewed + .tgl-btn:active:before {
+input[data-bağ~="eğik"] + label:active:before {
   left: -10%;
 }
-.tgl-skewed:checked + .tgl-btn {
+input[data-bağ~="eğik"]:checked + label {
   background: #86d993;
 }
-.tgl-skewed:checked + .tgl-btn:before {
+input[data-bağ~="eğik"]:checked + label:before {
   left: -100%;
   opacity: 0;
 }
-.tgl-skewed:checked + .tgl-btn:after {
+input[data-bağ~="eğik"]:checked + label:after {
   left: 0;
 }
-.tgl-skewed:checked + .tgl-btn:active:after {
+input[data-bağ~="eğik"]:checked + label:active:after {
   left: 10%;
 }
+input[data-bağ~="eğik"][data-bağ~="mnk"]+label{ font-size: 7pt;	width:4.5em;	height: 1.8em;}
+input[data-bağ~="eğik"][data-bağ~="ufk"]+label{	font-size: 9pt;	width:4.5em;	height: 1.8em;}
+input[data-bağ~="eğik"]+label{	font-size: 10pt;	width:4.5em;	height: 1.8em;}
+input[data-bağ~="eğik"][data-bağ~="ort"]+label{	font-size: 12pt;	width:4.5em;	height: 1.8em;}
+input[data-bağ~="eğik"][data-bağ~="byk"]+label{	font-size: 14pt;	width:4.5em;	height: 1.8em;}
+input[data-bağ~="eğik"][data-bağ~="dev"]+label{	font-size: 16pt;	width:4.5em;	height: 1.8em;}
 
-.tgl-flat + .tgl-btn {
+input[data-bağ~="yassı"] + label {
   padding: 2px;
   -webkit-transition: all .2s ease;
   transition: all .2s ease;
   background: #fff;
-  border: 4px solid #f2f2f2;
+  border: 4px solid #d2d2d2;
   border-radius: 2em;
+	width:5em;	height: 1.8em;
 }
-.tgl-flat + .tgl-btn:after {
+input[data-bağ~="yassı"] + label:after {
   -webkit-transition: all .2s ease;
   transition: all .2s ease;
   background: #f2f2f2;
   content: "";
   border-radius: 1em;
 }
-.tgl-flat:checked + .tgl-btn {
-  border: 4px solid #7FC6A6;
+input[data-bağ~="yassı"]:checked + label {
+  border: 4px solid green;
 }
-.tgl-flat:checked + .tgl-btn:after {
+input[data-bağ~="yassı"]:checked + label:after {
   left: 50%;
-  background: #7FC6A6;
+  background: green;
 }
+input[data-bağ~="yassı"][data-bağ~="mnk"]+label{ border-width: 2px; font-size: 7pt;	width:4em;	height: 1.8em;}
+input[data-bağ~="yassı"][data-bağ~="ufk"]+label{ border-width: 3px; font-size: 9pt;	width:4.5em;	height: 1.8em;}
+input[data-bağ~="yassı"][data-bağ~="ort"]+label{	border-width: 4px; font-size: 12pt;	width:6em;	height: 1.8em;}
+input[data-bağ~="yassı"][data-bağ~="byk"]+label{ border-width: 5px; 	font-size: 14pt;	width:7em;	height: 1.8em;}
+input[data-bağ~="yassı"][data-bağ~="dev"]+label{	border-width: 6px; font-size: 16pt;	width:8em;	height: 1.8em;}
 
-.tgl-flip + .tgl-btn {
+input[data-bağ~="çevrik"] + label {
   padding: 2px;
   -webkit-transition: all .2s ease;
   transition: all .2s ease;
@@ -345,7 +268,7 @@ input[data-bağ~="yumuşak"]:checked + label:active:after {
   -webkit-perspective: 100px;
           perspective: 100px;
 }
-.tgl-flip + .tgl-btn:after, .tgl-flip + .tgl-btn:before {
+input[data-bağ~="çevrik"] + label:after, input[data-bağ~="çevrik"] + label:before {
   display: inline-block;
   -webkit-transition: all .4s ease;
   transition: all .4s ease;
@@ -362,37 +285,40 @@ input[data-bağ~="yumuşak"]:checked + label:active:after {
           backface-visibility: hidden;
   border-radius: 4px;
 }
-.tgl-flip + .tgl-btn:after {
-  content: attr(data-tg-on);
+input[data-bağ~="çevrik"] + label:after {
+  content: attr(data-bağ-açık);
   background: #02C66F;
   -webkit-transform: rotateY(-180deg);
           transform: rotateY(-180deg);
 }
-.tgl-flip + .tgl-btn:before {
+input[data-bağ~="çevrik"] + label:before {
   background: #FF3A19;
-  content: attr(data-tg-off);
+  content: attr(data-bağ-kapalı);
 }
-.tgl-flip + .tgl-btn:active:before {
+input[data-bağ~="çevrik"] + label:active:before {
   -webkit-transform: rotateY(-20deg);
           transform: rotateY(-20deg);
 }
-.tgl-flip:checked + .tgl-btn:before {
+input[data-bağ~="çevrik"]:checked + label:before {
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
 }
-.tgl-flip:checked + .tgl-btn:after {
+input[data-bağ~="çevrik"]:checked + label:after {
   -webkit-transform: rotateY(0);
           transform: rotateY(0);
   left: 0;
   background: #7FC6A6;
 }
-.tgl-flip:checked + .tgl-btn:active:after {
+input[data-bağ~="çevrik"]:checked + label:active:after {
   -webkit-transform: rotateY(20deg);
           transform: rotateY(20deg);
 }
-
-
-
+input[data-bağ~="çevrik"][data-bağ~="mnk"]+label{  font-size: 7pt;	width:4em;	height: 1.8em;}
+input[data-bağ~="çevrik"][data-bağ~="ufk"]+label{  font-size: 9pt;	width:4.5em;	height: 1.8em;}
+input[data-bağ~="çevrik"]+label{  font-size: 10pt;	width:4.5em;	height: 1.8em;}
+input[data-bağ~="çevrik"][data-bağ~="ort"]+label{	 font-size: 12pt;	width:5em;	height: 1.8em;}
+input[data-bağ~="çevrik"][data-bağ~="byk"]+label{  	font-size: 14pt;	width:5em;	height: 1.8em;}
+input[data-bağ~="çevrik"][data-bağ~="dev"]+label{	 font-size: 16pt;	width:6em;	height: 1.8em;}
 
 
 
