--- a/assets/css/deveb.ilkel.css
+++ b/assets/css/deveb.ilkel.css
@@ -18,7 +18,7 @@
 
 
 /* ==========================================================================
-    Butonlar
+    Bağlar
 -------------------------------------------------------------------------- */
 [data-bağ]{
 	display: inline-block;
