--- a/assets/css/deveb.ilkel.css
+++ b/assets/css/deveb.ilkel.css
@@ -117,7 +117,7 @@ input[data-bağ]+label:after{
 	display: block;
 	content: "";
 	width: 50%;
-	height: 100%;
+	min-height: 100%;
 }
 input[data-bağ~="hafif"] + label{
 	background: #ccc;
