--- a/assets/css/deveb.english.css
+++ b/assets/css/deveb.english.css
@@ -35,6 +35,10 @@
   margin: 0;
   padding: 0;
 }
+body{
+  font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+}
 a{
   text-decoration: none;
 }
@@ -48,10 +52,13 @@ h1, h2, h3, h4, h5, h6{
     -webkit-margin-start: 0px;
     -webkit-margin-end: 0px;
 }
-body{
-  font-family: 'Roboto', sans-serif;
-    font-size: 11pt;
-}
+h1{font-size:3.6em}
+  h2{font-size:2.6em}
+    h3{font-size:1.8em}
+      h4{font-size:1.4em}
+        h5{font-size:1.2em}
+          h6{font-size:1.0em}
+
 
 /*  ==========================================================================
 GS1 GRID SYSTEM
