--- a/assets/css/deveb.english.css
+++ b/assets/css/deveb.english.css
@@ -63,14 +63,17 @@ h1{font-size:3.6em}
           h6{font-size:1.0em}
 
 
-/*  ==========================================================================
-GS1 GRID SYSTEM
-    Flexbox
-    ========================================================================== */
+
 
 /*  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 G00 GENERAL | Screen size: 0 ≤ * < ∞
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+/*
+GS1 | GRID SYSTEM
+    | Flexbox
+*/
+
     [data-gnl]{
       display: flex;
       flex-flow: wrap;
